--- a/index.html
+++ b/index.html
@@ -3,7 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Product</title>
   </head>
-  <body></body>
+  <body>
+    <!-- https://github.com/SergeyKorobka/business-promotion-119-2 -->
+    <header>
+      <a href="./index.html">
+        <img src="./images/logo.svg" alt="logo" width="40" heigth="36" />
+        Product</a
+      >
+      <main>
+        <ul>
+          <li>Product</li>
+          <li>Pricing</li>
+          <li>Customers</li>
+          <li>Resources</li>
+        </ul>
+      </main>
+      <ul>
+        <li><a href="./index.html" target="_blank">Sign In</a></li>
+        <li><a href="./index.html" target="_blank">Sign Up</a></li>
+      </ul>
+    </header>
+    <main>
+      <!-- #region main section -->
+      <section>
+        <h1>Work at the speed of thought</h1>
+        <p>
+          Tools, tutorials, design and innovation experts, all in one place! The
+          most intuitive way to imagine your next user experience.
+        </p>
+        <ul>
+          <li><button type="button">Get started</button></li>
+          <li><button type="button">Watch the Video</button></li>
+        </ul>
+        <img src="./images/hero-img.svg" alt="hero" width="610" height="555" />
+      </section>
+      <!-- #endregion main section -->
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
